# django-filter-drf-camel-case

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  test-pypi.yml
example_project/blog/: admin.py  models.py  views.py
example_project/blog/migrations/: 0001_initial.py
example_project/example_project/: settings.py  urls.py
src/django_filter_drf_camel_case/: __init__.py  backend.py  filters.py  regex.py
src/django_filter_drf_camel_case/spectacular/: extensions.py
tests/: conftest.py  test_backend.py  test_filters.py  test_spectacular.py
